# Team-project-Context-Translator-SS25

./: .aider.chat.history.md  .aider.input.history  .aiderignore  .env  .gitignore  AGENTS.md  Architecture.md  BACKEND_TEST_CONSOLIDATION_SUMMARY.md  CONTEXT.md  Create test_websocket.py  DIAGRAM-CONTEXT.md  DOCUMENTATION_SUMMARY.txt  GITHUB_ISSUE_TEMPLATE.md  IMPLEMENTATION_CHECKLIST.md  README.md  README_SOUND_FILES.md  SETTINGS_DATA_FLOW.md  SOUND_ASSIGNMENTS_QUICK_REFERENCE.md  SOUND_FILES_ISSUE.md  SOUND_SELECTION_GUIDE.md  SOUND_USAGE_GUIDE.md  STT_HEARTBEAT_FIX_SUMMARY.md  STT_STREAMING_OPTIMIZATION.md  SystemRunner.py  api.py  detector.py  explain_terms.py  explain_terms_modified.py  explanation_cache.json  explanation_list.py  filters.py  input_terms.json  linux-initial-setup-tutorial  linux-initial-setup.sh  main.py  main_explainer.py  mic_stt_demo.py  output_explanations.json  output_queue.json  package-lock.json  (+19 more)
.aider.tags.cache.v4/: cache.db  cache.db-shm  cache.db-wal
.github/: copilot-instructions.md
Backend/: MessageRouter.py  __init__.py  backend  backend.py  dependencies.py  main.py  run_backend_tests.py  settings.json
Documentation/: mermaid chart documentation.htm
Frontend/: 'node_modules'  FRONTEND_README.md  MessageQueue.js  NUL  README.md  SimulationManager.js  frontend  frontend.js  frontendOLD.js  index.html  indexOLD.html  package-lock.json  package.json  playwright.config.js  styles.css  test-index.html  test_frontend.js  vite.config.js  web-test-runner.config.mjs
Queue_Manager/: test_shared_queue.py
presentation/: QUICK_REFERENCE.md  (+6 more)
(+177 files in other folders)
