[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "your_project_name"
version = "0.1.0"
description = "Your project description"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "python-multipart>=0.0.5",
    "python-dotenv>=0.19.0"  # Optional but recommended
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.23.0",
    "flake8>=5.0"
]
